# clinical-trials

./: .gitignore  README.md  __main__.py  data_test.ipynb  dedupe_dataframe_learned_settings  dedupe_dataframe_training.json  nih_yaml.yml  out.csv  pyproject.toml
api/: Untitled-1.js  data_clean.py  fda.py  fetch_data.py  fetch_trials_data.py  load_trials_data.py
clinicaltrials/: app.py
clinicaltrials/api/: fetch_fda_data.py  fetch_trials_data.py
clinicaltrials/dashboard/: dashboard.md  dashboard.py
clinicaltrials/dashboard/visualization/: visualization.py
clinicaltrials/data/: collapse_drug_data.py  collapse_race_data.py  extract_fda_data.py  extract_trials_data.py  makedb.py  transformations.sql
dashboard/: dashboard.py
dashboard/visualization/: visualization.py
data/: collapse_drug_data.py  collapse_race_data.py  collapse_sponsor_data.py  extract_trials_data.py  load_trials_data.py  makedb.py  recode.py  transformations.sql  trial_headers.py  trials.db  trials.db-journal  trials_headers.txt
