[tool.poetry]
name = "clinical-trials"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.0"
requests = "^2.31.0"
pathlib = "^1.0.1"
plotly = "^5.19.0"
dash = "^2.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
