[tool.poetry]
name = "clinical-trials"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
pandas = "^2.2.0"
requests = "^2.31.0"
pathlib = "^1.0.1"
matplotlib = "^3.8.3"
dash = "^2.16.0"
setuptools = "^69.1.1"
pandas-dedupe = "^1.5.0"
jellyfish = "^1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
