[tool.poetry]
name = "clinicaltrials"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.1"
requests = "^2.31.0"
pathlib = "^1.0.1"
matplotlib = "^3.8.3"
mpld3 = "^0.5.10"
dash = "^2.16.0"
setuptools = "^69.1.1"
pandas-dedupe = "^1.5.0"
jellyfish = "^1.0.3"
ipython = "^8.22.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
